restrict access to get topic and implement api to get public topic